--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CLOUD_NAME=da8ygcsci
-API_KEY=742433721973165
-API_SECRET=gY8psy31OkBIswBf3DUf8dEBBFM
-SECRET=thisismysecret
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
+SECRET=
